tests/test109.rael.exp
Error [2:5]: 'break' is outside of a loop
|     break
|     ^
